@@ -410,6 +410,13 @@ main(int argc,char **argv)
   (void)nco_inq_format(nc_id,&fl_fmt);
   if(fl_fmt != NC_FORMAT_NETCDF4) rcd+=nco_redef(nc_id);
 
+  /* 20250208: WARN user about dicey types of renaming netCDF4 files */
+  if(fl_fmt == NC_FORMAT_NETCDF4 || NC_FORMAT_NETCDF4_CLASSIC){
+    if(nbr_var_rnm || nbr_dmn_rnm){
+      (void)fprintf(stdout,"%s: WARNING Notice how this discomfitting message intentionally begins on a re-assuring note :) Renaming variables, dimensions, and attributes in netCDF3-format files (including classic, 64-bit, and CDF5) ALWAYS works. Moreover, renaming groups and attributes in netCDF4-format files always works. However, a longstanding problem in the netCDF library (it is not an NCO issue per se) sometimes crashes %s or, even worse, silently corrupts data in the output file. These outcomes are only known to occur when attempting to rename variables to/from the same names as dimensions (i.e., coordinate variables), and or dimensions to/from the same names as variables. A long thread describing the status of this issue since 2017 is at https://github.com/Unidata/netcdf-c/issues/597. A chronology of the issue dating back to 2007 is at https://nco.sourceforge.net/nco.html#bug_nc4_rename. Do not expect this issue to be fixed in the near future :)\nHINT: There is a straightforward workaround that ALWAYS works: First translate the file to any netCDF3 format (e.g., with \"ncks -5 in.nc out.nc\") then perform the renaming, and then (if you wish to recover the netCDF4 features like compression) translate back to a netCDF4-format (e.g., with \"ncks -7 in.nc out.nc\").\n",nco_prg_nm,nco_prg_nm);
+    } /* !nbr_var_rnm nbr_dmn_rnm */
+  } /* !fl_fmt */
+
   /* Timestamp end of metadata setup and disk layout */
   rcd+=nco_ddra((char *)NULL,(char *)NULL,&ddra_info);
   ddra_info.tmr_flg=nco_tmr_rgl;
